--- a/CustomersCart/view/adminhtml/layout/customerscart_cart_submit.xml
+++ b/CustomersCart/view/adminhtml/layout/customerscart_cart_submit.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd" layout="admin-2columns-left">
     <body>
         <referenceContainer name="content">
-           <block class="MageModuleCrafters\CustomersCart\Block\Adminhtml\Cart\AdminCartView" name="customerscart_cart_submit" template="MageModuleCrafters_CustomersCart::cart/submit.phtml"/>
+            <block class="MageModuleCrafters\CustomersCart\Block\Adminhtml\Cart\AdminCartSubmit" name="customerscart_cart_submit" template="MageModuleCrafters_CustomersCart::cart/submit.phtml"/>
         </referenceContainer>
     </body>
 </page>
