used registry class to display data on block should of went with session, however, was having trouble displaying customer cart data on backend with session, so went with registry to push forward data to block.

--- a/CustomersCart/view/adminhtml/templates/cart/submit.phtml
+++ b/CustomersCart/view/adminhtml/templates/cart/submit.phtml
@@ -1,6 +1,6 @@
 <?php
-// Retrieve cart data set in the controller
-$cartData = $block->getData('cartData');
+// Retrieve cart data
+$cartData = $block->getCartData();
 ?>
 
 <h2>Cart Details:</h2>
